# Open_Edge

./: .gitpod.yml  Cargo.toml  README.md  dfx.json  package-lock.json  package.json
backend/hello/: Cargo.toml
backend/hello/src/: lib.rs
src/pages/: DemoPage.tsx  index.tsx
src/styles/: Home.module.css  global.css
