[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "*"
ic-cdk = "*"
ed25519-dalek = "1.1.3"
chacha20poly1305 = "0.10.0"
rand = "0.8.7"
serde = { version = "1.0.193", features = ["derive"] }
serde_cbor = "0.12.1"